Resolves: tdf#90583 3D pie-chart missing guide handles

partial revert of

commit db1d2af02861b49e4f53d726d59cd71c20cee9b1
Author: Armin Le Grand <alg@apache.org>
Date:   Tue Feb 18 21:18:13 2014 +0000

    Resolves: #i123539# some optimizations for 3D chart...

    geometry creation using UNO API

    (cherry picked from commit bbe35be767d76d08891c4f3d3600d80e0e6805f2)

(cherry picked from commit bca8d8985666d3fd22b91eb280f9baaeb933c2d0)
Reviewed-on: https://gerrit.libreoffice.org/15284
Tested-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 488d09771dfbdae0b94898dd675bc39b8550b85e)

Change-Id: If35f05fb62230e90cfc43a0beac053e8a87820d4
Reviewed-on: https://gerrit.libreoffice.org/15432
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Eike Rathke <erack@redhat.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>