svx/source/engine3d/scene3d.cxx
@@ -380,14 +380,7 @@ void E3dScene::NewObjectInserted(const E3dObject* p3DObj)
 void E3dScene::StructureChanged()
 {
     E3dObject::StructureChanged();
-
-    if(!GetModel() || !GetModel()->isLocked())
-    {
-        // #i123539# optimization for 3D chart object generation: do not reset
-        // already calculated scene projection data every time an object gets
-        // initialized
-        SetRectsDirty();
-    }
+    SetRectsDirty();
 
     ImpCleanup3DDepthMapper();
 }
